# work-hosting

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json  conanfile.txt  createVolumeFolders.sh  docker-compose.yaml  service.dockerfile  userver-build.dockerfile
backend/: CMakeLists.txt  Makefile
backend/cmake/: FindZeroMQ.cmake
backend/include/: CheckerRequest.hpp  Serializers.hpp  logger.hpp  work.hpp
backend/scripts/: checkWork.sh
backend/scripts/workSpecificChecks/: KP6.sh  KP8.sh  LR23.sh
backend/services/: CMakeLists.txt
backend/services/api/: CMakeLists.txt  README.md  main.cpp  static_config.yaml
backend/services/api/include/: ZmqContext.hpp  utils.hpp
backend/services/api/include/components/: auth.hpp  authCache.hpp  authFactory.hpp  checking_queue_updater.hpp  workHolder.hpp
backend/services/api/include/db/: CustomTypesMapping.hpp  schemas.hpp
backend/services/api/include/handlers/: add_work.hpp  get_checking_queue.hpp  get_marks.hpp  get_works.hpp  hello.hpp  login.hpp  pop_checking_queue.hpp  register.hpp  sendWork.hpp  student_profile.hpp  user_role.hpp
backend/services/api/queries/delete/: delete_expired_tokens.sql  pop_checking_queue.sql
backend/services/api/queries/read/: fetch_all_works.sql  fetch_checking_queue.sql  fetch_student_marks.sql  find_queue_entry.sql  find_student.sql  find_student_base.sql  find_work.sql  is_queue_entry_exists.sql  is_student_exists.sql  is_user_exists.sql
backend/services/api/queries/write/: accept_work.sql  add_checking_queue.sql  insert_student.sql  insert_token.sql  insert_user.sql  insert_work.sql  reject_work.sql  requeue_work.sql  update_admin.sql
backend/services/api/schemas/: AddWork.yaml  auth.yaml  check.yaml  checkingQueue.yaml  login.yaml  marks.yaml  popQueue.yaml  registration.yaml  studentProfile.yaml  work.yaml
backend/services/api/src/: ZmqContext.cpp  utils.cpp
backend/services/api/src/components/: auth.cpp  authFactory.cpp  checking_queue_updater.cpp  workHolder.cpp
backend/services/api/src/handlers/: add_work.cpp  get_checking_queue.cpp  get_marks.cpp  get_works.cpp  hello.cpp  login.cpp  pop_checking_queue.cpp  register.cpp  sendWork.cpp  student_profile.cpp  user_role.cpp
backend/services/api/tests/functional/: conftest.py  test_auth.py  test_get_student_profile.py  test_login.py  test_register.py
backend/services/api/tests/functional/static/: test_auth.sql  test_register.sql
backend/services/api/tests/unit/: redis_test.cpp
backend/services/checker/: .gitconfig  CMakeLists.txt  main.cpp
backend/src/: Work.cpp  logger.cpp
cfg/: secure_data.json
cfg/nginx/: nginx.conf
docker/: api-test.dockerfile  api.dockerfile  checker.dockerfile  develop.dockerfile
frontend/: README.md  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  hooks.ts  layout.tsx  page.tsx  store.ts
frontend/app/(main)/: layout.tsx  page.tsx
frontend/app/(main)/(logged)/: layout.tsx
frontend/app/(main)/(logged)/admin/: layout.tsx
frontend/app/(main)/(logged)/student/logs/: layout.tsx  page.tsx
frontend/app/(main)/(logged)/student/marks/: layout.tsx  (+1 more)
frontend/app/(main)/check/: page.tsx
frontend/app/(main)/list/: page.tsx
frontend/app/(main)/login/: page.tsx
frontend/app/(main)/profile/: page.tsx
frontend/app/(main)/register/: page.tsx
frontend/app/(main)/send/: page.tsx
frontend/app/(main)/student/marks/: page.tsx
frontend/app/_components/: Footer.tsx  Header.tsx  Input.tsx  NetworkError.tsx  NotLogged.tsx  Profile.tsx  UserData.tsx  WorksList.tsx
frontend/app/_feature/: checkingQueue.ts  client.ts  login.ts  register.ts  role.ts  userData.ts
frontend/app/_feature/admin/: addWork.ts  popWork.ts
frontend/app/_feature/student/: log.ts  marks.ts  send.ts
frontend/app/_logic/: validators.ts
frontend/app/_reducers/: profile.ts  userData.ts
frontend/app/_styles/: globals.ts
frontend/app/list/: page.tsx
frontend/app/send/: layout.tsx  page.tsx
include/: work.hpp
init/checker/: init.sh
init/pg/: 01_auth_db.sql  01_init.sql  02_init.sql  02_triggers.sql  03_add_name_to_auth.sql  03_views.sql  04_add_students.sql  init.sql
init/pg_tests/: workHosting.sql
scripts/: checkWork.sh
service/: CMakeLists.txt
service/include/components/: workHolder.hpp
service/include/handlers/: register.hpp
service/schemas/: register.yaml
service/src/components/: workHolder.cpp
service/src/handlers/: register.cpp  sendWork.cpp
services/: CMakeLists.txt
services/api/: CMakeLists.txt  main.cpp  static_config.yaml
services/api/include/components/: workHolder.hpp
services/api/src/components/: workHolder.cpp
services/api/src/handlers/: sendWork.cpp
services/checker/: CMakeLists.txt  main.cpp
src/: Work.cpp
(+4 files in other folders)
